Fixed overlapping again and made buttons smaller on desktop

--- a/src/views/static/home/style.css
+++ b/src/views/static/home/style.css
@@ -238,8 +238,7 @@ main {
     justify-content: space-between;
     align-items:end;
     margin-top: auto;
-    gap: 0.5rem
-    padding
+    gap: 0.5rem;
 }
 
 .movie-card__actions {
